# poetry_template

./: .coverage  README.md  pyproject.toml
.github/workflows/: pytest.yaml  pytest_gitgist.yaml  pytest_save_cov_im.yaml
_.github/workflows/: pytest_gitgist.yaml
template/: add.py  main.py
tests/: test_add.py
