[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["David Wessels <davidwessels15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.5"
numpy = "^1.24.1"
pytest = "^7.2.0"
coverage = "^7.0.3"
coverage-badge = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
